--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- Sidebar Navigation -->
     <div class="hidden lg:fixed lg:inset-y-0 lg:z-50 lg:flex lg:w-72 lg:flex-col">
-        <div class="flex grow flex-col gap-y-5 overflow-y-auto bg-gray-900 px-6 pb-4 border-r border-gray-800">
+        <div class="flex grow flex-col gap-y-5 overflow-y-auto bg-transparent px-6 pb-4">
             <div class="flex h-16 shrink-0 items-center">
                 <span class="text-2xl font-bold text-white">ChabadAI</span>
             </div>
@@ -400,7 +400,7 @@
                 pointLight2.position.set(-5, -3, -5);
                 scene.add(pointLight2);
 
-                camera.position.z = 200; // Start at fixed position
+                camera.position.z = globeConfig.cameraDistance;
 
                 const starGeometry = new THREE.BufferGeometry();
                 const starMaterial = new THREE.PointsMaterial({ color: globeConfig.starColor, size: globeConfig.starSize });
@@ -458,7 +458,7 @@
                     }
                 })
                     .to(globe.rotation, { y: "+=6.28", ease: "none" }, 0) // Spin 360 degrees (2*PI radians)
-                    .to(camera.position, { z: 180, ease: "power1.inOut" }, 0) // Zoom in slightly
+                    .to(camera.position, { z: 150, ease: "power1.inOut" }, 0)
                     .to("#globe-section .text-glow", { opacity: 0, scale: 0.5, ease: "power1.in" }, ">-0.5")
                     .to("#globe-section p", { opacity: 0, scale: 0.5, ease: "power1.in" }, "<");
 
