bunch of smaller ui changes

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                                 class="w-full inline-flex items-center justify-center rounded-md px-4 py-2 text-sm font-medium bg-gray-800 text-white hover:bg-gray-700">
                                 Sign In
                             </button>
-                            <button
+                            <!-- <button
                                 class="w-full inline-flex items-center justify-center rounded-md px-4 py-2 text-sm font-medium border border-gray-700 text-gray-300 hover:bg-gray-800">
                                 Settings
-                            </button>
+                            </button> -->
                         </div>
                     </li>
                 </ul>
@@ -107,10 +107,11 @@
             <section class="relative" id="globe-section">
                 <div id="globe-container"></div>
                 <div id="globe-text"
-                    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center text-white z-20 pointer-events-none">
-                    <h2 class="text-4xl md:text-6xl font-black text-glow">Connecting Jewish Communities Worldwide</h2>
-                    <p class="text-xl mt-4 max-w-2xl mx-auto">Our AI platform spans the globe, bringing Torah learning
-                        together.</p>
+                    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center z-20 pointer-events-none">
+                    <h2 class="text-4xl md:text-6xl font-black text-gray-800">Connecting Jewish Communities Worldwide
+                    </h2>
+                    <!-- <p class="text-xl mt-4 max-w-2xl mx-auto">Our AI platform spans the globe, bringing Torah learning
+                        together.</p> -->
                 </div>
                 <div id="chat-input"
                     class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-3xl px-6 z-20 opacity-0">
@@ -157,6 +158,10 @@
                         <div class="mx-auto mt-16 max-w-2xl sm:mt-20 lg:mt-24 lg:max-w-none">
                             <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-3">
                                 <div class="flex flex-col">
+                                    <div class="mb-4 rounded-lg overflow-hidden">
+                                        <img src="https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?w=400&h=300&fit=crop"
+                                            alt="Torah Study" class="w-full h-48 object-cover">
+                                    </div>
                                     <dt class="text-base font-semibold leading-7 text-white">Torah Study Assistant</dt>
                                     <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
                                         <p class="flex-auto">Get instant explanations and insights on Torah passages,
@@ -164,6 +169,10 @@
                                     </dd>
                                 </div>
                                 <div class="flex flex-col">
+                                    <div class="mb-4 rounded-lg overflow-hidden">
+                                        <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?w=400&h=300&fit=crop"
+                                            alt="Personalized Learning" class="w-full h-48 object-cover">
+                                    </div>
                                     <dt class="text-base font-semibold leading-7 text-white">Personalized Learning</dt>
                                     <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
                                         <p class="flex-auto">Adaptive learning paths that adjust to your level and
@@ -171,6 +180,10 @@
                                     </dd>
                                 </div>
                                 <div class="flex flex-col">
+                                    <div class="mb-4 rounded-lg overflow-hidden">
+                                        <img src="https://images.unsplash.com/photo-1516979187457-637abb4f9353?w=400&h=300&fit=crop"
+                                            alt="Multi-Language" class="w-full h-48 object-cover">
+                                    </div>
                                     <dt class="text-base font-semibold leading-7 text-white">Multi-Language Support</dt>
                                     <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
                                         <p class="flex-auto">Access content in Hebrew, English, Yiddish, and more with
@@ -178,6 +191,10 @@
                                     </dd>
                                 </div>
                                 <div class="flex flex-col">
+                                    <div class="mb-4 rounded-lg overflow-hidden">
+                                        <img src="https://images.unsplash.com/photo-1505664194779-8beaceb93744?w=400&h=300&fit=crop"
+                                            alt="Halachic Guidance" class="w-full h-48 object-cover">
+                                    </div>
                                     <dt class="text-base font-semibold leading-7 text-white">Halachic Guidance</dt>
                                     <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
                                         <p class="flex-auto">Get reliable guidance on Jewish law and customs with
@@ -185,6 +202,10 @@
                                     </dd>
                                 </div>
                                 <div class="flex flex-col">
+                                    <div class="mb-4 rounded-lg overflow-hidden">
+                                        <img src="https://images.unsplash.com/photo-1529156069898-49953e39b3ac?w=400&h=300&fit=crop"
+                                            alt="Community" class="w-full h-48 object-cover">
+                                    </div>
                                     <dt class="text-base font-semibold leading-7 text-white">Community Features</dt>
                                     <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
                                         <p class="flex-auto">Connect with fellow learners, share insights, and
@@ -192,6 +213,10 @@
                                     </dd>
                                 </div>
                                 <div class="flex flex-col">
+                                    <div class="mb-4 rounded-lg overflow-hidden">
+                                        <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?w=400&h=300&fit=crop"
+                                            alt="Instant Answers" class="w-full h-48 object-cover">
+                                    </div>
                                     <dt class="text-base font-semibold leading-7 text-white">Instant Answers</dt>
                                     <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
                                         <p class="flex-auto">Ask questions about Jewish texts, traditions, or practices
@@ -235,10 +260,10 @@
                                         <a href="#"><span class="absolute inset-0"></span>The Future of Torah Study in
                                             the Digital Age</a>
                                     </h3>
-                                    <p class="mt-5 text-sm leading-6 text-gray-300">
+                                    <!-- <p class="mt-5 text-sm leading-6 text-gray-300">
                                         Exploring how AI technology can enhance traditional Jewish learning while
                                         preserving the sacred nature of Torah study.
-                                    </p>
+                                    </p> -->
                                 </div>
                                 <div class="relative mt-8 flex items-center gap-x-4">
                                     <div class="text-sm text-gray-400">5 min read</div>
@@ -262,10 +287,10 @@
                                         <a href="#"><span class="absolute inset-0"></span>Understanding Halacha Through
                                             AI: A Modern Approach</a>
                                     </h3>
-                                    <p class="mt-5 text-sm leading-6 text-gray-300">
+                                    <!-- <p class="mt-5 text-sm leading-6 text-gray-300">
                                         How artificial intelligence can help clarify complex Jewish law questions while
                                         maintaining respect for rabbinic authority.
-                                    </p>
+                                    </p> -->
                                 </div>
                                 <div class="relative mt-8 flex items-center gap-x-4">
                                     <div class="text-sm text-gray-400">7 min read</div>
@@ -289,10 +314,10 @@
                                         <a href="#"><span class="absolute inset-0"></span>Building Bridges: AI and
                                             Jewish Community</a>
                                     </h3>
-                                    <p class="mt-5 text-sm leading-6 text-gray-300">
+                                    <!-- <p class="mt-5 text-sm leading-6 text-gray-300">
                                         The role of technology in strengthening Jewish communities and making learning
                                         accessible to everyone.
-                                    </p>
+                                    </p> -->
                                 </div>
                                 <div class="relative mt-8 flex items-center gap-x-4">
                                     <div class="text-sm text-gray-400">4 min read</div>
@@ -463,25 +488,28 @@
                     scrollTrigger: {
                         trigger: "#globe-section",
                         start: "top top",
-                        end: "+=4000",
+                        end: "+=5000",
                         scrub: 1,
                         pin: true,
+                        pinSpacing: true,
                         onUpdate: (self) => {
                             // Speed up rotation as user scrolls
                             currentRotationSpeed = baseRotationSpeed * (1 + self.progress * 4);
                         }
                     }
                 })
-                    // Phase 1: Spin globe and fade out text (0-25%)
+                    // Phase 1: Spin globe and fade out text (0-20%)
                     .to(globe.rotation, { y: "+=3.14", ease: "none" }, 0)
                     .to(camera.position, { z: 180, ease: "power1.inOut" }, 0)
-                    .to("#globe-text", { opacity: 0, scale: 0.8, ease: "power1.in" }, 0.15)
-                    // Phase 2: Fade in chat input quickly (25-40%)
-                    .to("#chat-input", { opacity: 1, scale: 1, ease: "power1.out", duration: 0.2 }, 0.3)
-                    .to(globe.rotation, { y: "+=3.14", ease: "none" }, 0.25)
-                    // Phase 3: Chat stays prominent, globe fades VERY slowly (40-100%)
-                    .to("#globe-container", { opacity: 0, ease: "power2.inOut", duration: 0.6 }, 0.5)
-                    .to(camera.position, { z: 150, ease: "power1.inOut" }, 0.5);
+                    .to("#globe-text", { opacity: 0, scale: 0.8, ease: "power1.in" }, 0.12)
+                    // Phase 2: Fade in chat input quickly (20-35%)
+                    .to("#chat-input", { opacity: 1, scale: 1, ease: "power1.out", duration: 0.15 }, 0.25)
+                    .to(globe.rotation, { y: "+=3.14", ease: "none" }, 0.2)
+                    // Phase 3: Globe fades slowly (35-70%)
+                    .to("#globe-container", { opacity: 0, ease: "power2.inOut", duration: 0.35 }, 0.4)
+                    .to(camera.position, { z: 150, ease: "power1.inOut" }, 0.4)
+                    // Phase 4: Chat stays visible alone (70-100%) - pause before continuing
+                    .to("#chat-input", { opacity: 1 }, 0.75);
 
                 window.addEventListener('resize', () => {
                     camera.aspect = globeContainer.offsetWidth / globeContainer.offsetHeight;
