--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         body {
             font-family: 'Inter', sans-serif;
             overflow-x: hidden;
-            background: #111827;
+            background: #000000;
             color: #ffffff;
         }
 
@@ -108,7 +108,7 @@
                 <div id="globe-container"></div>
                 <div id="globe-text"
                     class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center z-20 pointer-events-none">
-                    <h2 class="text-4xl md:text-6xl font-black text-gray-800">Connecting Jewish Communities Worldwide
+                    <h2 class="text-4xl md:text-6xl font-semibold text-gray-500">How can I help your shlichus today?
                     </h2>
                     <!-- <p class="text-xl mt-4 max-w-2xl mx-auto">Our AI platform spans the globe, bringing Torah learning
                         together.</p> -->
@@ -122,7 +122,7 @@
                                 placeholder="Ask me anything about Torah, Halacha, or Jewish learning..."
                                 class="flex-1 bg-gray-900/50 text-white placeholder-gray-400 border border-gray-600 rounded-xl px-6 py-4 text-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
                             <button type="submit"
-                                class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-8 py-4 rounded-xl transition-colors">
+                                class="bg-gray-700 hover:bg-gray-600 text-white font-semibold px-8 py-4 rounded-xl transition-colors">
                                 Ask
                             </button>
                         </div>
@@ -157,71 +157,89 @@
                         </div>
                         <div class="mx-auto mt-16 max-w-2xl sm:mt-20 lg:mt-24 lg:max-w-none">
                             <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-3">
-                                <div class="flex flex-col">
-                                    <div class="mb-4 rounded-lg overflow-hidden">
-                                        <img src="https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?w=400&h=300&fit=crop"
-                                            alt="Torah Study" class="w-full h-48 object-cover">
+                                <div class="flex flex-row gap-4">
+                                    <div class="flex-shrink-0 rounded-lg overflow-hidden w-24 h-24">
+                                        <img src="https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?w=200&h=200&fit=crop"
+                                            alt="Torah Study" class="w-full h-full object-cover">
                                     </div>
-                                    <dt class="text-base font-semibold leading-7 text-white">Torah Study Assistant</dt>
-                                    <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
-                                        <p class="flex-auto">Get instant explanations and insights on Torah passages,
-                                            Talmudic discussions, and Jewish law with our advanced AI.</p>
-                                    </dd>
+                                    <div class="flex-1">
+                                        <dt class="text-base font-semibold leading-7 text-white">Torah Study Assistant
+                                        </dt>
+                                        <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-gray-300">
+                                            <p class="flex-auto">Get instant explanations and insights on Torah
+                                                passages,
+                                                Talmudic discussions, and Jewish law with our advanced AI.</p>
+                                        </dd>
+                                    </div>
                                 </div>
-                                <div class="flex flex-col">
-                                    <div class="mb-4 rounded-lg overflow-hidden">
-                                        <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?w=400&h=300&fit=crop"
-                                            alt="Personalized Learning" class="w-full h-48 object-cover">
+                                <div class="flex flex-row gap-4">
+                                    <div class="flex-shrink-0 rounded-lg overflow-hidden w-24 h-24">
+                                        <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?w=200&h=200&fit=crop"
+                                            alt="Personalized Learning" class="w-full h-full object-cover">
                                     </div>
-                                    <dt class="text-base font-semibold leading-7 text-white">Personalized Learning</dt>
-                                    <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
-                                        <p class="flex-auto">Adaptive learning paths that adjust to your level and
-                                            interests, making Jewish education more accessible and engaging.</p>
-                                    </dd>
+                                    <div class="flex-1">
+                                        <dt class="text-base font-semibold leading-7 text-white">Personalized Learning
+                                        </dt>
+                                        <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-gray-300">
+                                            <p class="flex-auto">Adaptive learning paths that adjust to your level and
+                                                interests, making Jewish education more accessible and engaging.</p>
+                                        </dd>
+                                    </div>
                                 </div>
-                                <div class="flex flex-col">
-                                    <div class="mb-4 rounded-lg overflow-hidden">
-                                        <img src="https://images.unsplash.com/photo-1516979187457-637abb4f9353?w=400&h=300&fit=crop"
-                                            alt="Multi-Language" class="w-full h-48 object-cover">
+                                <div class="flex flex-row gap-4">
+                                    <div class="flex-shrink-0 rounded-lg overflow-hidden w-24 h-24">
+                                        <img src="https://images.unsplash.com/photo-1516979187457-637abb4f9353?w=200&h=200&fit=crop"
+                                            alt="Multi-Language" class="w-full h-full object-cover">
                                     </div>
-                                    <dt class="text-base font-semibold leading-7 text-white">Multi-Language Support</dt>
-                                    <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
-                                        <p class="flex-auto">Access content in Hebrew, English, Yiddish, and more with
-                                            seamless translation and cultural context.</p>
-                                    </dd>
+                                    <div class="flex-1">
+                                        <dt class="text-base font-semibold leading-7 text-white">Multi-Language Support
+                                        </dt>
+                                        <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-gray-300">
+                                            <p class="flex-auto">Access content in Hebrew, English, Yiddish, and more
+                                                with
+                                                seamless translation and cultural context.</p>
+                                        </dd>
+                                    </div>
                                 </div>
-                                <div class="flex flex-col">
-                                    <div class="mb-4 rounded-lg overflow-hidden">
-                                        <img src="https://images.unsplash.com/photo-1505664194779-8beaceb93744?w=400&h=300&fit=crop"
-                                            alt="Halachic Guidance" class="w-full h-48 object-cover">
+                                <div class="flex flex-row gap-4">
+                                    <div class="flex-shrink-0 rounded-lg overflow-hidden w-24 h-24">
+                                        <img src="https://images.unsplash.com/photo-1505664194779-8beaceb93744?w=200&h=200&fit=crop"
+                                            alt="Halachic Guidance" class="w-full h-full object-cover">
                                     </div>
-                                    <dt class="text-base font-semibold leading-7 text-white">Halachic Guidance</dt>
-                                    <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
-                                        <p class="flex-auto">Get reliable guidance on Jewish law and customs with
-                                            sources and explanations from trusted rabbinic authorities.</p>
-                                    </dd>
+                                    <div class="flex-1">
+                                        <dt class="text-base font-semibold leading-7 text-white">Halachic Guidance</dt>
+                                        <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-gray-300">
+                                            <p class="flex-auto">Get reliable guidance on Jewish law and customs with
+                                                sources and explanations from trusted rabbinic authorities.</p>
+                                        </dd>
+                                    </div>
                                 </div>
-                                <div class="flex flex-col">
-                                    <div class="mb-4 rounded-lg overflow-hidden">
-                                        <img src="https://images.unsplash.com/photo-1529156069898-49953e39b3ac?w=400&h=300&fit=crop"
-                                            alt="Community" class="w-full h-48 object-cover">
+                                <div class="flex flex-row gap-4">
+                                    <div class="flex-shrink-0 rounded-lg overflow-hidden w-24 h-24">
+                                        <img src="https://images.unsplash.com/photo-1529156069898-49953e39b3ac?w=200&h=200&fit=crop"
+                                            alt="Community" class="w-full h-full object-cover">
                                     </div>
-                                    <dt class="text-base font-semibold leading-7 text-white">Community Features</dt>
-                                    <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
-                                        <p class="flex-auto">Connect with fellow learners, share insights, and
-                                            participate in study groups within our secure platform.</p>
-                                    </dd>
+                                    <div class="flex-1">
+                                        <dt class="text-base font-semibold leading-7 text-white">Community Features</dt>
+                                        <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-gray-300">
+                                            <p class="flex-auto">Connect with fellow learners, share insights, and
+                                                participate in study groups within our secure platform.</p>
+                                        </dd>
+                                    </div>
                                 </div>
-                                <div class="flex flex-col">
-                                    <div class="mb-4 rounded-lg overflow-hidden">
-                                        <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?w=400&h=300&fit=crop"
-                                            alt="Instant Answers" class="w-full h-48 object-cover">
+                                <div class="flex flex-row gap-4">
+                                    <div class="flex-shrink-0 rounded-lg overflow-hidden w-24 h-24">
+                                        <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?w=200&h=200&fit=crop"
+                                            alt="Instant Answers" class="w-full h-full object-cover">
                                     </div>
-                                    <dt class="text-base font-semibold leading-7 text-white">Instant Answers</dt>
-                                    <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
-                                        <p class="flex-auto">Ask questions about Jewish texts, traditions, or practices
-                                            and get comprehensive, well-sourced answers instantly.</p>
-                                    </dd>
+                                    <div class="flex-1">
+                                        <dt class="text-base font-semibold leading-7 text-white">Instant Answers</dt>
+                                        <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-gray-300">
+                                            <p class="flex-auto">Ask questions about Jewish texts, traditions, or
+                                                practices
+                                                and get comprehensive, well-sourced answers instantly.</p>
+                                        </dd>
+                                    </div>
                                 </div>
                             </dl>
                         </div>
@@ -245,8 +263,7 @@
                             <!-- Article 1 -->
                             <article class="flex flex-col items-start">
                                 <div class="relative w-full">
-                                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&h=400&fit=crop&crop=center"
-                                        alt="Article"
+                                    <img src="public/1.png" alt="Article"
                                         class="aspect-square w-full rounded-lg bg-gray-800 object-cover" />
                                 </div>
                                 <div class="flex items-center gap-x-4 text-xs mt-6">
@@ -272,8 +289,7 @@
                             <!-- Article 2 -->
                             <article class="flex flex-col items-start">
                                 <div class="relative w-full">
-                                    <img src="https://images.unsplash.com/photo-1518709268805-4e9042af2176?w=400&h=400&fit=crop&crop=center"
-                                        alt="Article"
+                                    <img src="public/2.png" alt="Article"
                                         class="aspect-square w-full rounded-lg bg-gray-800 object-cover" />
                                 </div>
                                 <div class="flex items-center gap-x-4 text-xs mt-6">
@@ -299,8 +315,7 @@
                             <!-- Article 3 -->
                             <article class="flex flex-col items-start">
                                 <div class="relative w-full">
-                                    <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?w=400&h=400&fit=crop&crop=center"
-                                        alt="Article"
+                                    <img src="public/3.png" alt="Article"
                                         class="aspect-square w-full rounded-lg bg-gray-800 object-cover" />
                                 </div>
                                 <div class="flex items-center gap-x-4 text-xs mt-6">
@@ -488,7 +503,7 @@
                     scrollTrigger: {
                         trigger: "#globe-section",
                         start: "top top",
-                        end: "+=5000",
+                        end: "+=4500",
                         scrub: 1,
                         pin: true,
                         pinSpacing: true,
@@ -508,7 +523,7 @@
                     // Phase 3: Globe fades slowly (35-70%)
                     .to("#globe-container", { opacity: 0, ease: "power2.inOut", duration: 0.35 }, 0.4)
                     .to(camera.position, { z: 150, ease: "power1.inOut" }, 0.4)
-                    // Phase 4: Chat stays visible alone (70-100%) - pause before continuing
+                    // Phase 4: Chat stays visible alone (75-85%) - brief pause before continuing
                     .to("#chat-input", { opacity: 1 }, 0.75);
 
                 window.addEventListener('resize', () => {
