--- a/index.html
+++ b/index.html
@@ -107,19 +107,17 @@
             <section class="relative" id="globe-section">
                 <div id="globe-container"></div>
                 <div id="globe-text"
-                    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center z-20 pointer-events-none">
-                    <h2 class="text-4xl md:text-6xl font-semibold text-gray-500">How can I help your shlichus today?
-                    </h2>
-                    <!-- <p class="text-xl mt-4 max-w-2xl mx-auto">Our AI platform spans the globe, bringing Torah learning
-                        together.</p> -->
+                    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-3xl px-6 z-20 pointer-events-none">
+                    <div class="px-6 py-4">
+                        <p class="text-lg text-gray-400">How can I help your shlichus today?</p>
+                    </div>
                 </div>
                 <div id="chat-input"
                     class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-3xl px-6 z-20 opacity-0">
                     <form id="chat-form"
                         class="bg-gray-800/90 backdrop-blur-sm rounded-2xl shadow-2xl border border-gray-700 p-6">
                         <div class="flex items-center gap-4">
-                            <input id="chat-input-field" type="text"
-                                placeholder="Ask me anything about Torah, Halacha, or Jewish learning..."
+                            <input id="chat-input-field" type="text" placeholder="How can I help your shlichus today?"
                                 class="flex-1 bg-gray-900/50 text-white placeholder-gray-400 border border-gray-600 rounded-xl px-6 py-4 text-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
                             <button type="submit"
                                 class="bg-gray-700 hover:bg-gray-600 text-white font-semibold px-8 py-4 rounded-xl transition-colors">
@@ -535,6 +533,7 @@
 
             // Rotating placeholder text
             const placeholders = [
+                "How can I help your shlichus today?",
                 "What is the meaning of this week's Torah portion?",
                 "Explain the laws of Shabbat candle lighting...",
                 "Tell me about the Rebbe's teachings on education",
